[package]
name = "splunk-killer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow_ext = "0.2.1"
mimalloc = { version = "0.1.37", default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
warp = "0.3.5"
seafloor = {git = "https://github.com/zjhken/SeaFloor.git"}
regex = "1.8.4"
concat-string = "1.0.1"
tracing-test = "0.2.4"


[[bin]]
path = "src/regx.rs"
name = "regx"

[[bin]]
path = "src/top.rs"
name = "jintop"
